@@ -168,7 +168,7 @@ Jean-Francois Ripouteau <Jean-Francois dot Ripouteau at netsurf dot org>
 Ajit Sagar <asagar at spdmail dot spd dot dsccc dot com>
 Ashish Singhai <singhai at delirius dot cs dot uiuc dot edu>
 David Sames <David dot L dot Sames dot 1 at gsfc dot nasa dot gov>
-Gonzalo Diethelm <gonzalo dot diethelm at aditiva dot com>
+Gonzalo Diethelm <gdiethelm at dcv dot cl>
 Raj <raj at itd dot ssb dot com>
 Darrin Edelman <darrin at aetherworks dot com>
 Steve Weismuller <spweismu at rsoc dot rockwell dot com>
@@ -2320,6 +2320,7 @@ Trent Nadeau <Trent dot Nadeau at ngc dot com>
 Nick Meyer <nick dot meyer at sensis dot com>
 Olivier Langlois <olivier at olivierlanglois dot net>
 Patrick Soboljew <patrick dot soboljew at gmail dot com>
+Tim Pinkawa <tpinkawa at eagleseven dot com>
 Ed Blackmond <ed dot blackmond at themis dot com>
 
 I would particularly like to thank Paul Stephenson, who worked with me
